# tinyply

./: .gitignore  .travis.yml  BUILD  BUILD.bazel  CMakeLists.txt  MODULE.bazel  Makefile  README.md  appveyor.yml  readme.md
assets/: cube_ascii.ply  cube_quad_ascii.ply  icosahedron.ply  icosahedron_ascii.ply  sofa.ply  sofa_ascii.ply
cmake/: Config.cmake.in  tinyply.pc.in
source/: Makefile  example-utils.hpp  example.cpp  tests.cpp  tinyply.cpp  tinyply.h
tests/: CMakeLists.txt  read.cc  write.cc
tinyply.vcxproj/: tinyply.sln  tinyply.vcxproj  tinyply.vcxproj.filters
tinyply.xcodeproj/: project.pbxproj
tinyply.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
tinyply.xcodeproj/xcshareddata/xcschemes/: tinyply.xcscheme
